ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookshelf-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: bookshelf.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: bookshelf-api-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookshelf-frontend
                port:
                  number: 80
